# CurlingSheet

./: .gitignore  README.md  README_EN.md  RELEASING.md  dialogs.py  main.py  main.spec  main_window.py  md_positions.py  painter.py  pyproject.toml  requirements.txt  sheet.py  sheet2pos.py  stone.py
.github/workflows/: ci.yml  release.yml
curlingsheet/: __init__.py  dialogs.py  geometry.py  main.py  main_window.py  md_positions.py  painter.py  primitives.py  resources.py  sheet.py  spec.py  stone.py
curlingsheet/renderers/: __init__.py  mpl.py  qt.py
tests/: _qt_scene.py  test_mpl.py  test_qt_parity.py  test_spec.py
