[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curlingsheet"
dynamic = ["version"]
description = "Curling sheet stone placement viewer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.2",
    "pyqt6==6.7.1",
]

[project.scripts]
curlingsheet = "curlingsheet.main:main"

[project.optional-dependencies]
build = ["pyinstaller>=6.20.0"]
mpl = ["matplotlib>=3.8"]
test = ["pytest>=8"]

# バージョンは curlingsheet/__init__.py の __version__ を唯一の出典とする
[tool.hatch.version]
path = "curlingsheet/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["curlingsheet"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
